<?xml version="1.0"?>
<package format="2">
  <name>ros2_qt_demo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="linxi22@todo.todo">linxi22</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
</package>
